--- a/Python_Basics_with_Numpy.ipynb
+++ b/Python_Basics_with_Numpy.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Python Basics with Numpy\n",
     "\n",
-    
+    {
+      "cells": [
   {
    "cell_type": "markdown",
    "metadata": {},
