--- a/Python_Basics_with_Numpy.ipynb
+++ b/Python_Basics_with_Numpy.ipynb
@@ -4,22 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Basics with Numpy (optional assignment)\n",
+    "# Python Basics with Numpy \n",
     "\n",
-    "Welcome to your first assignment. This exercise gives you a brief introduction to Python. Even if you've used Python before, this will help familiarize you with the functions we'll need.  \n",
-    "\n",
-    "**Instructions:**\n",
-    "- You will be using Python 3.\n",
-    "- Avoid using for-loops and while-loops, unless you are explicitly told to do so.\n",
-    "- After coding your function, run the cell right below it to check if your result is correct.\n",
-    "\n",
-    "**After this assignment you will:**\n",
-    "- Be able to use iPython Notebooks\n",
-    "- Be able to use numpy functions and numpy matrix/vector operations\n",
-    "- Understand the concept of \"broadcasting\"\n",
-    "- Be able to vectorize code\n",
-    "\n",
-    "Let's get started!"
    ]
   },
   {
